--- a/sass/main.scss
+++ b/sass/main.scss
@@ -153,6 +153,9 @@ nav[role=navigation]:after{
 		list-style: none;
 	}
 }
+.hero__graphic{
+
+}
 .tagline{
 	width: 100%;
 	position: absolute;
@@ -181,15 +184,16 @@ nav[role=navigation]:after{
 			font-size: em(115px, $font-size);
 		}
 	}
+	display: none;
+	@media screen and (min-width: 800px) {
+		display: block;
+	}
 	
 }
 .our-services{
 	background-color: $primaryColor;
 	padding: 30px;
-	position: absolute;
-	z-index: 2;
-	left: 0;
-	bottom: 0;
+	position: relative;
 	li{
 		position: relative;
 		a{
@@ -223,6 +227,12 @@ nav[role=navigation]:after{
 	li:last-child:after{
 		content: "";
 		display: none;
+	}
+	@media screen and (min-width: 800px) {
+		position: absolute;
+		z-index: 2;
+		left: 0;
+		bottom: 0;
 	}
 }
 .intro{
@@ -369,6 +379,13 @@ nav[role=navigation]:after{
 		}
 	}
 }
+.about{
+	padding: 0;
+	margin-top: 30px;
+}
+.about__description{
+	padding-top: 30px;
+}
 .history{
 	@extend .our-services;
 	position: relative;
@@ -390,7 +407,7 @@ nav[role=navigation]:after{
 			font-weight: bold;
 		}
 		i{
-			font-size: em(26px, $font-size);
+			font-size: em(22px, $font-size);
 			font-weight: normal;
 			font-style: normal;
 			line-height: 1.4em;
